# Proposal-Writer

./: .gitignore  .replit  data_export.py  document_parser.py  gemini_service.py  graphic_renderer.py  main.py  models.py  package-lock.json  package.json  pdf_generator.py  pyproject.toml  replit.md  routes.py  tailwind.config.js  web_scraper.py  word_generator.py
attached_assets/: 01_SF330_E_Albert_Ari_1770654678825.docx  02_-_SCDOT_Br1480_1770409724468.docx  330_Section_E_Standards_template_1770398969209.docx  330_Section_F_Standards_TXDOT_Complex_1770229590122.docx  330_Section_G_Standards_08-2026-mwc_1770486074175.docx  Document_-_1_(2)_1771595640103.csv  License_Survey_1769653684996.csv  Michael_Craig_1-2026_1769780392912.docx  PAGE_1_330_Section_A_Standards_2021_1769725840958.doc  PAGE_2_330_Section_E_Standards_2021_1769725840959.doc  PAGE_3_330_Section_F_Standards_2021_1769726371006.doc  PAGE_4_330_Section_G_Standards_2021_1769726371007.doc  PAGE_4_330_Section_G_Standards_2021_1769726460159.docx  PAGE_6_SF330_Part_II_2021_1769725840961.docx  Page_5_330_Section_H_Template-2021_1769725840960.doc  Pasted--Project-Name-SF330-AI-Automation-System-Goal-Build-a-w_1769631898550.txt  Pasted-Import-failed-psycopg2-errors-ForeignKeyViolation-inser_1769814911637.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycop_1769644952797.txt  Pasted-Technical-Specification-for-Automated-Proposal-Ready-Or_1772721260414.txt  Pasted-The-DOT-Bridge-Selection-Committee-Judge-Prompt-Role-Yo_1771886845785.txt  SF330_Section_E_Resume_Template-2-10-26_1770740113930.docx  SF330_Section_E_Resume_Template-2-10-26_1770751383845.docx  SF330_Section_F_Template_(1)-mwc_1770394097919.docx  SF330_Section_F_Template_(2)-mwc_1770394292072.docx  William_1769810593170.docx  (+6 more)
(+69 files in other folders)
